[tool.poetry]
name = "benefits-template"
version = "0.1.0"
description = "benefits-template"
authors = ["Danis Sharafutdinov sharafutdinovv.danis@gmail.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
